fix(docs): dark mode header bar style is bad

--- a/demo/src/docs-template.scss
+++ b/demo/src/docs-template.scss
@@ -9,6 +9,9 @@
       color: var(--pl-cr) !important;
     }
   }
+  html[theme-mode='dark'] & {
+    background-color: #10162388 !important;
+  }
 }
 
 html[theme-mode='dark'] {
